tests/invalid/i12_identifier_starts_digit.tsl
# INVALID TEST 12: Task name starting with a digit
# Expected error: lexical/syntax error
# Identifiers must start with a letter

TASK 123backup {
    RUN "backup.sh"
    EVERY DAY AT 02:00
}
